[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "Personal collection of \"Advent of Code\" solutions"
authors = ["Vincent Jansz"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
